pyproject.toml: hardcode list of package
Commit e5e2d69c, which removed the setuptools 'find' config from
pyproject.toml, was not the correct fix for 'pip install': it causes pip
to become very confused and create an endless directory hierarchy under
build/lib/build/lib/... which gets deeper every time the package is
installed.

Instead, hardcode the list of packages to install in pyproject.toml.
This fixes the original problem (some files are not installed) as well
as the new problem.

I am not convinced this is the best fix for the issue in the long term,
but it makes the build functional for now.

Fixes:	e5e2d69caa49 ("pyproject: remove setuptools 'find' config")

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,15 @@ dependencies = [
     "textual>=0.38.1",
 ]
 
-[tool.setuptools.packages.find]
-exclude = ["tmp"]
+[tool.setuptools]
+packages = [
+    "tooi",
+    "tooi.api",
+    "tooi.data",
+    "tooi.screens",
+    "tooi.utils",
+    "tooi.widgets",
+]
 
 [tool.setuptools.package-data]
 tooi = ["app.css"]
