Add flake8 for linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ tooi = ["app.css"]
 [project.optional-dependencies]
 dev = [
     "build",
+    "flake8",
     "mypy",
     "pyright",
     "textual-dev",
